# gvsa-game-analysis

./: --help  .gitignore  LICENSE  Makefile  README.md  TABLE_ANALYSIS_SUMMARY.md  age_progression.py  analysis.ipynb  analyze_clubs.py  analyze_mitm.py  analyze_table_formats.py  cli.py  database.py  db_pony.py  import_csv_matches.py  models.py  parse_csv.py  parse_seasons.py  parse_standings.py  pyproject.toml  requirements.txt  scraper.py  scraper_selenium.py  search_cached_html.py  setup.py  table_analysis.json  table_verification.json  team_matching_candidates.py  team_progression.py  verify_table_parsing.py
.cursor/: version_bump.mdc
.ipynb_checkpoints/: analysis-checkpoint.ipynb
extracted_responses/: fields.jsp  seasons.jsp  standings.jsp
gvsa/: __init__.py  age_progression.py  analyze_clubs.py  cli.py  cli_output.py  db_pony.py  import_csv.py  parse_seasons.py  scraper.py  team_matching_candidates.py  team_name_parser.py  team_progression.py
notebooks/: 03_age_group_overview.ipynb  analysis_original.ipynb  club_analysis.ipynb  database_analysis.ipynb  division_analysis.ipynb  team_analysis.ipynb
old/: capture_standings_request.py  check_mitm_standings.py  check_progress.py  check_seasons.py  cli.py  db_pony.py  extract_data.py  models.py  populate_matches.py  query_team.py  scraper_selenium.py  team_matching_candidates.py  team_progression.py  test_match_parsing.py
venv_gvsa_scrape/: pyvenv.cfg
